Update title to reflect alpha state

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:title" content="IguaRPG 2">
+    <meta property="og:title" content="IguaRPG 2 - Alpha Ver.">
     <meta property="og:determiner" content="">
-    <meta property="og:description" content="Be an iguana and save the world from evil.">
+    <meta property="og:description" content="Be an iguana and save the world from evil again.">
     <meta property="og:type" content="game">
     <meta property="og:image" content="https://github.com/hubol/igua-rpg/raw/master/misc/card.png">
-    <title>IguaRPG 2</title>
+    <title>IguaRPG 2 - Alpha Ver.</title>
     <link href="index.css" rel="stylesheet" type="text/css">
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="touch-icon-ios.png"> -->
