Loading screen now takes place on DOM

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
 </head>
 
 <body>
+    <div id="loading">
+        <button id="user_gesture">Please Click</button>
+        <div id="loading_bar">
+            <div class="front"></div>
+        </div>
+    </div>
     <noscript>JavaScript&trade; is required to play this game.</noscript>
 </body>
 
