Improve Please Click hide animation

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,9 @@
 
 <body>
     <div id="loading">
-        <button id="user_gesture">Please Click</button>
+        <button id="user_gesture">
+            <span>Please Click</span>
+        </button>
         <div id="loading_bar">
             <div class="front"></div>
         </div>
