Handle case where preload bar is removed from dom

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
     <noscript>JavaScript&trade; is required to play this game.</noscript>
 </body>
 
-<script>setTimeout(() => !preload.style.opacity && (preload.style.opacity = '1'), 250)</script>
+<script>setTimeout(() => typeof preload !== 'undefined' && !preload.style.opacity && (preload.style.opacity = '1'), 250)</script>
 <script src="index.js" type="module"></script>
 </html>
