First pass on some a naive debug tool

--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,17 @@
 </head>
 
 <body>
-    <div id="loading">
-        <button id="user_gesture">
-            <span>Please Click</span>
-        </button>
-        <div id="loading_bar">
-            <div id="preload"></div>
-            <div class="front"></div>
+    <main>
+        <div id="loading">
+            <button id="user_gesture">
+                <span>Please Click</span>
+            </button>
+            <div id="loading_bar">
+                <div id="preload"></div>
+                <div class="front"></div>
+            </div>
         </div>
-    </div>
+    </main>
     <noscript>JavaScript&trade; is required to play this game.</noscript>
 </body>
 
