Stupid rounded borders on color inputs

--- a/src/lib/game-engine/elements/el-debug-colors.html
+++ b/src/lib/game-engine/elements/el-debug-colors.html
@@ -14,6 +14,7 @@
     border: none;
     width: 32px;
     height: 32px;
+    background: none;
 }
 
 .debug_colors input[type="color"]::-webkit-color-swatch-wrapper {
@@ -22,6 +23,7 @@
 
 .debug_colors input[type="color"]::-webkit-color-swatch {
     border: none;
+    border-radius: 2px;
 }
 
 .debug_colors.hidden {
