--- a/src/lib/game-engine/elements/el-runtime-errors-root.html
+++ b/src/lib/game-engine/elements/el-runtime-errors-root.html
@@ -17,17 +17,39 @@
     font-weight: 600;
 }
 
+.runtime_errors .error .nature {
+    overflow: hidden;
+    border-radius: 3px 0 0 3px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.runtime_errors .error .nature {
+    background-color: #f00000;
+}
+
+.runtime_errors .error[data-nature="Misconfigured"] .nature {
+    background-color: #ff8800;
+}
+
 .runtime_errors .error {
     display: flex;
     gap: 0.5rem;
     cursor: pointer;
 
     background-color: #a00000;
-    color: white;
-    text-shadow: 0 -1px 0 #400000;
-    padding: 0.2rem 0.5rem;
+    padding-right: 0.5rem;
 
     border-radius: 3px;
+}
+
+.runtime_errors .error .nature ~ * {
+    color: white;
+    text-shadow: 0 -1px 0 #400000;
+}
+
+.runtime_errors .error > * {
+    padding: 0.2rem 0;
 }
 
 .runtime_errors .error.empty {
