--- a/src/lib/game-engine/elements/el-logs-root.html
+++ b/src/lib/game-engine/elements/el-logs-root.html
@@ -32,6 +32,10 @@
     background-color: #ff8800;
 }
 
+.logs .log[data-nature="Info"] .nature {
+    background-color: #7070ff;
+}
+
 .logs .log {
     display: flex;
     gap: 0.5rem;
@@ -43,9 +47,18 @@
     border-radius: 3px;
 }
 
+.logs .log[data-nature="Info"] {
+    background-color: #ffffff;
+}
+
 .logs .log .nature ~ * {
     color: white;
     text-shadow: 0 -1px 0 #400000;
+}
+
+.logs .log[data-nature="Info"] .nature ~ * {
+    color: black;
+    text-shadow: none;
 }
 
 .logs .log > * {
