In dev mode, upgrade transient game start config

--- a/src/lib/game-engine/elements/el-toast.html
+++ b/src/lib/game-engine/elements/el-toast.html
@@ -12,6 +12,28 @@
     box-sizing: border-box;
 }
 
+.toast dl {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2em;
+    align-items: flex-start;
+}
+
+.toast pre {
+    background-color: #3870A8;
+    color: #f0ffff;
+    padding: 0.1em 0.2em;
+    border-radius: 2px;
+}
+
+.toast dt {
+    margin-top: 0.4em;
+}
+
+.toast dd {
+    font-size: 0.825em;
+}
+
 .toast.info {
     background-color: #f0ffff;
 }
