--- a/src/lib/game-engine/elements/el-logs-root.html
+++ b/src/lib/game-engine/elements/el-logs-root.html
@@ -32,7 +32,7 @@
     background-color: #ff8800;
 }
 
-.logs .log[data-nature="Info"] .nature {
+.logs .log[data-nature="Debug"] .nature {
     background-color: #7070ff;
 }
 
@@ -47,7 +47,7 @@
     border-radius: 3px;
 }
 
-.logs .log[data-nature="Info"] {
+.logs .log[data-nature="Debug"] {
     background-color: #ffffff;
 }
 
@@ -56,7 +56,7 @@
     text-shadow: 0 -1px 0 #400000;
 }
 
-.logs .log[data-nature="Info"] .nature ~ * {
+.logs .log[data-nature="Debug"] .nature ~ * {
     color: black;
     text-shadow: none;
 }
