Fix CSS selector for error message

--- a/src/lib/game-engine/elements/el-logs-root.html
+++ b/src/lib/game-engine/elements/el-logs-root.html
@@ -28,7 +28,7 @@
     background-color: #f00000;
 }
 
-.logs .log[data-nature="MisconfiguredError"] .nature {
+.logs .log[data-nature="Misconfigured"] .nature {
     background-color: #ff8800;
 }
 
