Adjust brilliant CSS for color picker

--- a/src/lib/game-engine/elements/el-debug-colors.html
+++ b/src/lib/game-engine/elements/el-debug-colors.html
@@ -11,7 +11,6 @@
 
 .debug_colors input[type="color"] {
     cursor: pointer;
-    border: none;
     width: 32px;
     height: 32px;
     background: none;
@@ -22,7 +21,7 @@
 }
 
 .debug_colors input[type="color"]::-webkit-color-swatch {
-    border: none;
+    border: solid 1px #ffffff40;
     border-radius: 2px;
 }
 
